--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <title>Malezja 2016</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" >
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
+    <link rel="shortcut icon" type="./image/png" href="/img/favicon.ico"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <link href="./node_modules/bootstrap/dist/css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <script src="./bootstrap.js"></script>
+    <link href="./bootstrap.css" rel='stylesheet' type='text/css'/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
