--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <title>Malezja 2016</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" >
-    <link rel="shortcut icon" type="./image/png" href="/img/favicon.ico"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="./bootstrap.js"></script>
-    <link href="./bootstrap.css" rel='stylesheet' type='text/css'/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="./image/png" href="./assets/img/favicon.ico"/>
+    <script src="./assets/jquery.min.js"></script>
+    <script src="./assets/bootstrap/bootstrap.js"></script>
+    <link href="./assets/bootstrap/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <script src="./assets/browser.min.js"></script>
+    <script src="./assets/remarkable.min.js"></script>
+    <link href="./assets/font-awesome-4.6.3/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
+    <link href='./assets/lato/Lato.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app">
