--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href='./assets/lato/Lato.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="app">
+    <div class="app">
       <div id="background"></div>
       <div id="content">
 
