--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <script src="./assets/remarkable.min.js"></script>
     <link href="./assets/font-awesome-4.6.3/css/font-awesome.min.css" rel='stylesheet' type='text/css' />
     <link href='./assets/lato/Lato.css' rel='stylesheet' type='text/css'>
+    <meta name="description" content="Blog o podróży przez Budapeszt do Kuala Lumpur | Singapur | Kota Kinabalu (Borneo) i nie tylko. O ciekawych miejscach, ludziach, kulturach.">
+    <meta name="keywords" content="malezja,podroz,wycieczka,kuala lumpur,signapur,kota kinabalu,mateusz oracz,trip, doha">
+    <meta name="author" content="Mateusz Oracz">
+    <!--  Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-82068986-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <div class="app">
